--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Ore Finder</title>
+<title>Alchemist Finder</title>
 
 <style>
 * { box-sizing: border-box; }
@@ -276,3 +276,4 @@ document.querySelectorAll(".npcIcon").forEach(icon => {
 
 </body>
 </html>
+
